# OpenPCDet

./: .gitignore  requirements.txt
data/carla/mdls/utils/: mdl_to_kitti_converter.py  mdls_to_kitti_converter.py
misc/: helpful_commands.txt
pcdet/: version.py
pcdet/datasets/: __init__.py  dataset.py
pcdet/datasets/carla/mdls/: carla_mdls_dataset.py  mdlidar_pb2.py
pcdet/datasets/demo/: demo_dataset.py
pcdet/datasets/kitti/: kitti_dataset.py
pcdet/datasets/kitti/kitti_object_eval_python/: eval.py  rotate_iou.py
pcdet/models/backbones_3d/: __init__.py
pcdet/models/detectors/: __init__.py  pointpillarpc.py
pcdet/models/roi_heads/: __init__.py
tools/: demo_carla.py  train.py
tools/cfgs/carla_mdls_models/: pointpillar.yaml
tools/cfgs/dataset_configs/: carla_mdls_dataset.yaml  kitti_dataset.yaml
tools/cfgs/kitti_models/: pointpillar.yaml
tools/eval_utils/: eval_utils.py
utils/: visualize.py
utils/carla_mdls/mdlidar_sample/: CMakeLists.txt  protoc_compile_script.txt
utils/carla_mdls/mdlidar_sample/src/: mdlidar.pb.cc  mdlidar.pb.h  read_lidar.cpp  read_state.cpp
utils/carla_mdls/mdlidar_sample/src_py/: read_state.py
